# oria-lang

./: .gitignore  Cargo.toml  README.md
examples/: 000.oria  001.oria  002.oria  003.oria  basic_000.oria  basic_001.oria  basic_002.oria  cubical.oria  equal.oria  math.oria  memory.oria  nat.oria  prelude.oria  so.oria
src/: backend.rs  define.rs  diagnostic.rs  front.rs  lib.rs
src/define/: ast.rs  context.rs  mir.rs  value.rs
src/define/mir/: check.rs  codegen.rs  mangling.rs  pretty.rs
src/front/: grammar.pest  parser.rs
